[metadata]
license_file = LICENSE

[coverage:run]
plugins = scripts.coverage
source = csimdjson
omit =
    # Coverage is picking up the Cython memoryview implementation, which
    # causes errors when generating reports.
    stringsource

[coverage:report]
exclude_lines =
    pragma: no cover

[tool:pytest]
required_plugins=pytest-benchmark

[flake8]
filename = *.pyx,*.pxd,*.pxi,*.py
per-file-ignores = 
    *.pyx:E211,E901,E999,E225,E226,E227,W504
    *.pyi:E211,E901,E999,E225,E226,E227,W504
    *.pxd:E211,E901,E999,E225,E226,E227,W504
exclude =
    venv
